# Phebe

./: .breakpoints  .flake8  .gitignore  .pre-commit-config.yaml  .replit  README.md  StayAlive.py  base.py  factgen.py  facts.json  getdoc.py  init.py  main.py  objects.inv  pyproject.toml  requirements.txt  sandbox.py  todolist.txt
commands/: Ban.py  Doc.py  Eval.py  Fact.py  Facts.py  Help.py  Money.py  PyPi.py  Python.py  Rule.py  Server.py  ServerInfo.py  Wiki.py  ban.py  fact.py  help.py  money.py  python.py  server.py  wiki.py
frontend/: tailwind.config.js
frontend/src/: index.html  particles-config.js  styles.css
