[tool.poetry]
name = "repl_python3_Phebe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
schedule = "^1.1.0"
bs4 = "^0.0.1"
sphobjinv = "^2.1"
disnake = "^2.3.0"
colorama = "^0.4.4"
furl = "^2.1.2"
base_utils = "^1.0.14"
aiohttp = "^3.8.1"
nest-asyncio = "^1.5.4"
websockets = "^10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
